# portolan

./: .gitignore  CLAUDE.md  DOCUMENTATION.md  README.md  catalog_sources.py  catalog_state.py  esri2iceberg.py  extractors.py  iceberg_catalog.py  iceberg_metadata.py  iceberg_rest_catalog.py  namespace_utils.py  next.config.ts  output_generators.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  portolan.py  portolan_resource.py  pyproject.toml  schemas.py  sdi_catalog.py  sync_controller.py
design-mockups/: a-editorial.html
docs/: catalog-data-model.md  demo-catalog.md  presentation.md
docs/i18n/: glossary.md
docs/superpowers/plans/: 2026-06-06-mobile-first-refactor.md
docs/superpowers/specs/: 2026-06-06-mobile-first-refactor-design.md
messages/: ar.json  en.json  es.json
scripts/: set-private-key.mjs
src/: proxy.ts
src/app/: globals.css  layout.tsx
src/app/[locale]/: layout.tsx  page.tsx
src/app/[locale]/quickstart/: page.tsx
src/app/api/revalidate/: route.ts
src/app/api/submit-catalog/: route.ts
src/components/: dither-map-canvas.tsx  dither-map.tsx  dither-shader.ts  hero-rotator.tsx  home-page.tsx  index.ts  live-count.tsx  locale-switcher.tsx  map-preview.tsx  portolan-logo.tsx  publish-map.tsx  quickstart-page.tsx  quickstart-section.tsx  resources-section.tsx  rhumb-backdrop.tsx  site-footer.tsx  site-header.tsx  theme-toggle.tsx
src/components/registry/: catalog-card.tsx  catalog-map.tsx  map-geocoder.tsx
src/components/ui/: btn.tsx  card.tsx  dir-arrow.tsx  index.ts  ltr.tsx  section-head.tsx  tag.tsx  terminal.tsx
src/hooks/: use-geocode.ts  use-resolved-theme.ts
src/i18n/: direction.ts  navigation.ts  request.ts  routing.ts
src/lib/: catalogs.ts
tests/: TEST_RESOURCES.md  __init__.py  conftest.py  test_catalog_sources.py  test_catalog_state.py  test_cli.py  test_namespace_utils.py  test_output_generators.py  test_resource.py  test_schemas.py  test_sync_controller.py
web/: index.html  manifest.json
