[project]
name = "portolan"
version = "0.2.0"
description = "Geospatial data infrastructure tools for sharing open data using cloud-native formats"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "duckdb>=1.0.0",
    "fastavro>=1.12.1",
    "geopandas>=1.1.2",
    "httpx>=0.25.0",
    "jsonschema>=4.0",
    "obstore>=0.3.0",
    "pyarrow>=14.0.0",
    "pyiceberg>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
portolan = "portolan:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["portolan.py", "iceberg_catalog.py", "esri2iceberg.py", "catalog_state.py", "output_generators.py", "portolan_resource.py", "schemas.py", "catalog_sources.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
